<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>athena_status_led_driver</name>
  <version>0.0.0</version>
  <description>Driver for the Athena Status LED ring (WS2812B via SPI).</description>

  <maintainer email="fabian@sim.tu-darmstadt.de">Stefan Fabian</maintainer>
  <license>MIT</license>
  <author email="fabian@sim.tu-darmstadt.de">Stefan Fabian</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>hector_ros2_utils</build_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>athena_firmware_interface_msgs</depend>
  <depend>athena_status_led_driver_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
